# fotaro

./: .gitignore  LICENSE.txt  pyproject.toml
configs/: test.toml
src/: fotaro.py  overseer.py  photo_store.py  server.py  session_manager.py  util.py
src/fotaro/: __init__.py  cas.py  component.py  formulaic.py  fotaro.py  main.py  overseer.py  search.py  server.py  session_manager.py  util.py
src/fotaro/data/static/: fotaro.js  photos.html
src/fotaro/data/templates/: photos.html
src/fotaro/static/: fotaro.js
src/fotaro/templates/: photos.html
static/: album.html  album.js  fotaro.js  photos.html  view.html  view.js
stubs/PIL/: Image.py
stubs/docopt/: __init__.py
